--- a/Github Website/index.html
+++ b/Github Website/index.html
@@ -102,13 +102,13 @@
 								<article>
 									<header>
 										<span class="date">Project 5</span>
-										<h2><a href="#"> <br />
+										<h2><a href="https://github.com/shan0310/Covid_19_Cases_Analysis_Python_Power-Bi"> Covid_19 Analysis Python and Power Bi<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p></p>
+									<a href="#" class="image fit"><img src="images/new-normality.png" alt="" /></a>
+									<p>This is a Python and Power BI project. I collected COVID-19 data by date, then used Jupyter Notebook with Python to perform data cleaning and analysis. Afterward, I utilized Power BI to visualize the total cases, total recoveries, and total deaths by region and state. </p>
 									<ul class="actions special">
-										<!--<li><a href="#" class="button"></a></li>-->
+										<li><a href="https://github.com/shan0310/Covid_19_Cases_Analysis_Python_Power-Bi" class="button">View My Project</a></li>
 									</ul>
 								</article>
 								<!--<article>
